--- a/proposition.html
+++ b/proposition.html
@@ -19,7 +19,8 @@
             <input type="text" plaseholder="Опис пропозиції" id="prop_desc" name="prop_desc" /><br>
             
             <label for="prop_contact" class="form_label">Організація:</label>
-            <input type="text" plaseholder="Назва організації" id="prop_contact" name="prop_contact" /><br>
+            <input list="contact_list" plaseholder="Назва організації" id="prop_contact" name="prop_contact" /><br>
+            <datalist id="contact_list"></datalist>
             
         </form>
 
